Added: New color brewer scheme sets: Embark, RdGy, Rainbow, Sinebow, Spectral

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -349,12 +349,14 @@
                     onchange="setColorScheme()">
 
                 <option value=Titanic-2>Titanic-2</option>
+                <option value=Embark>Embark</option>
                 <option value=Titanic>Titanic</option>
                 <option value=Single-Hue>Single-Hue</option>
                 <option value=Multi-Hue>Multi-Hue</option>
                 <option value='Blues'>Blues</option>
                 <option value='Greens'>Greens</option>
                 <option value='Greys'>Greys</option>
+                <option value='RdGy'>RdGy</option>
                 <option value='Oranges'>Oranges</option>
                 <option value='Purples'>Purples</option>
                 <option value='Reds'>Reds</option>
@@ -377,6 +379,9 @@
                 <option value='Cool'>Cool</option>
                 <option value='CubehelixDefault'>CubehelixDefault</option>
                 <option value='Plasma'>Plasma</option>
+                <option value='Rainbow'>Rainbow</option>
+                <option value='Sinebow'>Sinebow</option>
+                <option value='Spectral'>Spectral</option>
             </select>
 
             <script>
