Fixed: Control panel values are now used to set initial values of Navigator.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -822,7 +822,18 @@
     ]
 
 
-
+    // When window finished loading
+    window.load( () => {
+        setColorScheme()
+        setPanelWidth()
+        setStrokeColor()
+        setStrokeWidth()
+        toggleConnectorPolygons()
+        toggleAbsoluteChartWidths()
+        setConnectorOpacity()
+        toggleAbsoluteValues()
+        setAnimationDuration()
+    })
 
 </script>
 
