Improved: Education Years column is now also visualized in Census-Income 1994 navigator

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -229,7 +229,7 @@
 
                         'US Census-Income 1994':{
                             path: '/TEPAIV/CPC/data/census/USCensus1994-AdultIncome.csv',
-                            columnsToOmit: ['relationship', 'race', 'hours-per-week', 'age', 'occupation', 'education', 'education-years', 'work-class', 'fnlwgt', 'capital-gain', 'capital-loss', 'native-country'],
+                            columnsToOmit: ['relationship', 'race', 'hours-per-week', 'age', 'occupation', 'education', 'work-class', 'fnlwgt', 'capital-gain', 'capital-loss', 'native-country'],
                             columnsToForceAsCategorical: [],
                             x: 300,
                             height: 900,
