Fixed: Ineffective window.load commands are commented out; now only stroke width is updated based on slider value on page load
There seems to be room for only one function within window.load and window.onload. This is true even if multiple functions are wrapped within an anonymous function is passed as an argument to window.load/windlow.onload.

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -823,17 +823,21 @@
 
 
     // When window finished loading
-    window.load( () => {
-        setColorScheme()
-        setPanelWidth()
-        setStrokeColor()
+    // window.onload( setStrokeWidth() )
+    window.onload( initialize() )
+    function initialize(){
         setStrokeWidth()
-        toggleConnectorPolygons()
-        toggleAbsoluteChartWidths()
-        setConnectorOpacity()
-        toggleAbsoluteValues()
-        setAnimationDuration()
-    })
+        // setPanelWidth()
+    }
+    // TODO: Functions below should be combined within one window.load() statement (wrapping them in one arrow function did not work)
+    // window.load( toggleAbsoluteChartWidths() )
+    // window.load(  )
+    // window.load( setColorScheme() )
+    // window.load( setStrokeColor() )
+    // window.load( toggleConnectorPolygons() )
+    // window.load( setConnectorOpacity() )
+    // window.load( toggleAbsoluteValues() )
+    // window.load( setAnimationDuration() )
 
 </script>
 
