UI: 'Updated' indicators removed from dataset dropdown

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -141,8 +141,8 @@
                 <option value="Mushrooms (4 columns)">Mushrooms (4 columns)</option>
                 <option value="Mushrooms (8 columns)">Mushrooms (8 columns)</option>
                 <option value="">------------ ↓ New ↓ ------------</option>
-                <option value="Titanic">Titanic (Updated)</option>
-                <option value="COVID-19">COVID-19 (Updated; Large data, ±5s load time)</option>
+                <option value="Titanic">Titanic</option>
+                <option value="COVID-19">COVID-19 (Large data, ±5s load time)</option>
                 <option value="US Census-Income 1994">US Census-Income 1994</option>
                 <option value="Hair-Eye Color">Hair-Eye Color</option>
                 <option value="UC Berkeley Admissions">UC Berkeley Admissions</option>
