UI: 'Titanic - Embark' dataset is now labeled as 'Titanic - Enriched'

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -134,7 +134,7 @@
                     onchange="loadSelectedDataset()"
             >
 
-                <option value="Titanic - Embark">Titanic - Embark</option>
+                <option value="Titanic - Enriched">Titanic - Enriched</option>
                 <option value="Titanic - Prediction Sample">Titanic - Prediction Sample</option>
                 <option value="Wine">Wine</option>
                 <option value="Big Five (2 dimensions, generated)">Big Five (2 dimensions, generated)</option>
@@ -171,7 +171,7 @@
 
                         },
 
-                        'Titanic - Embark': {
+                        'Titanic - Enriched': {
                             path: '/TEPAIV/CPC/data/TitanicResearch.csv',
                             columnsToOmit: [ 'name', 'sibsp', 'parch', 'boat'],
                             columnsToForceAsCategorical: [ 'sex', 'class', 'status' ],
