UI: Navigator titles 'TITANIC DATASET' are now 'TITANIC PASSENGERS'

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -167,7 +167,7 @@
                             path: '/TEPAIV/CPC/data/TitanicR.hl.csv',
                             columnsToOmit: [ ],
                             height: 750,
-                            bgTitle: 'TITANIC DATASET'
+                            bgTitle: 'TITANIC PASSENGERS'
 
                         },
 
@@ -176,7 +176,7 @@
                             columnsToOmit: [ 'name', 'sibsp', 'parch', 'boat'],
                             columnsToForceAsCategorical: [ 'sex', 'class', 'status' ],
                             height: 750,
-                            bgTitle: 'TITANIC DATASET'
+                            bgTitle: 'TITANIC PASSENGERS'
                         },
 
                         'Titanic - Prediction Sample': {
