Minor: Prototype disclaimer added

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -109,6 +109,8 @@
     <div class="preferences-pane">
 
 
+        This prototype is a proof of concept and it may contain some bugs.
+        <br/>
         <h3>Instructions</h3>
         <span>
             <b>Drilldown</b>: L Click <br>
