UI: Added welcome note

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -109,7 +109,8 @@
     <div class="preferences-pane">
 
 
-        This prototype is a proof of concept and it may contain some bugs.
+        Welcome to the Faceted Frequency Browser.
+        Please note that this prototype is a proof of concept and it may contain some bugs.
         <br/>
         <h3>Instructions</h3>
         <span>
