Improved: Final text position

--- a/CPC/demo-session.html
+++ b/CPC/demo-session.html
@@ -386,9 +386,9 @@
         // Remove instructions
         instructions
             .x(10)
-            .y(400)
-            .text('This API was used to create "Faceted Frequency Browser" in a similar way.')
-            .update()
+            .y(425)
+            .text('This API was used to create the interactive data exploration tool, "Faceted Frequency Browser"')
+            .update(0)
 
     }, 70000)
 
