Improved: Instruction text colors

--- a/CPC/demo-session.html
+++ b/CPC/demo-session.html
@@ -69,12 +69,14 @@
     instructions
         .text('Welcome to this API demo. On the left, you are seeing the results of this code:')
         .x(475)
+        .fill('gray')
         .update(0)
 
 
     const currentCode = new shape.Text()
     currentCode
         .text('')
+        .fill('dodgerblue')
         .x(475)
         .y(50)
         .update(0)
