Fixed: Missing cpcDefaults.js reference in HTML

--- a/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
+++ b/CPC/libraries/cpc/tests/navigator/visualTests/panel_vTests.html
@@ -30,6 +30,7 @@
 
 
     <!--========================-- INTERNAL MODULES ========================-->
+    <script type="text/javascript" src="/TEPAIV/CPC/cpcDefaults.js"></script>
     <script type="text/javascript" src="../../../../../data/datasets.js"></script>
 
     <script type="text/javascript" src="../../../../utils/arrayUtils.js"></script>
