--- a/CPC/index.html
+++ b/CPC/index.html
@@ -68,6 +68,19 @@
 
 <body>
 
+<defs>
+
+    <filter id="drop-shadow-filter" x="0" y="0" width="200%" height="200%">
+        <feOffset result="offOut" in="SourceAlpha" dx="5" dy="5" />
+<!--        <feGaussianBlur result="blurOut" in="offOut" stdDeviation="10" />-->
+        <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+    </filter>
+
+    <filter id="blur-filter">
+        <feGaussianBlur in="SourceGraphic" stdDeviation="2" />
+    </filter>
+
+</defs>
 
 <!--======================== CONTROLS ========================-->
 
