Added: ASCII header 'FFB'

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -67,6 +67,16 @@
 </head>
 
 <body>
+<!----------------------------------------------------------------------------
+███████╗███████╗██████╗
+██╔════╝██╔════╝██╔══██╗
+█████╗  █████╗  ██████╔╝
+██╔══╝  ██╔══╝  ██╔══██╗
+██║     ██║     ██████╔╝
+╚═╝     ╚═╝     ╚═════╝
+Faceted Frequency Browser
+----------------------------------------------------------------------------->
+
 
 <defs>
 
