Fixed: Settings now update after dataset is changed

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -372,7 +372,7 @@ Faceted Frequency Browser
                             .build()
 
 
-                        that.objects('panel-0-0').bgText( bgTitle ).update()
+                        that.objects('panel-0').bgText( bgTitle ).update()
 
                         allNavigators[0] = that
 
@@ -589,7 +589,7 @@ Faceted Frequency Browser
         </div>
 
 
-        <h4>Connectors</h4>
+        <h4>Connectors </br>(experimental, some bugs may occur in complex queries)</h4>
 
         <!--Category Connectors checkbox-->
         <div class="preference-control ui toggle checkbox" id="category-connectors-control">
@@ -888,7 +888,7 @@ Faceted Frequency Browser
 
 
 
-        that.objects('panel-0-0').bgText( bgTitle ).update()
+        that.objects('panel-0').bgText( bgTitle ).update()
 
 
     } )
