Interface: 'Absolute Chart Widths' setting label changed to 'Relative Chart Widths'

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -705,7 +705,7 @@ Faceted Frequency Browser
                    checked="checked"
             >
             <label for="absolute-chart-widths-checkbox" class="preference-control-label">
-                Absolute Chart Widths
+                Relative Chart Widths
             </label>
 
 
