Refactor / Interface: Changed color theme order

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -400,11 +400,13 @@ Faceted Frequency Browser
                     onchange="setColorScheme()"
             >
 
+                <option value=EuroMulti>EuroMulti</option>
+                <option value=EuroSingle>EuroSingle</option>
+                <option value=Multi-Hue>Multi-Hue</option>
+                <option value=Single-Hue>Single-Hue</option>
                 <option value=Embark>Embark</option>
                 <option value=Titanic-2>Titanic-2</option>
                 <option value=Titanic>Titanic</option>
-                <option value=Single-Hue>Single-Hue</option>
-                <option value=Multi-Hue>Multi-Hue</option>
                 <option value='Blues'>Blues</option>
                 <option value='Greens'>Greens</option>
                 <option value='Greys'>Greys</option>
